[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/logo/gravityworld.png" type="Texture" id=1]
[ext_resource path="res://assets/prefabs/menu/PlayButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/prefabs/menu/OptionsButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sprites/character/platformChar_idle.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Kenney Pixel.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/prefabs/menu/FadeIn.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/scripts/MainMenu.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 5 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 50.0
margin_right = 924.0
margin_bottom = 550.0
custom_constants/separation = 15

[node name="TextureRect" type="TextureRect" parent="Menu"]
margin_right = 824.0
margin_bottom = 100.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 115.0
margin_right = 824.0
margin_bottom = 469.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 410.0
margin_bottom = 354.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
alignment = 1

[node name="PlayButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 114.0
margin_right = 410.0
margin_bottom = 174.0

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 179.0
margin_right = 410.0
margin_bottom = 239.0

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 414.0
margin_right = 824.0
margin_bottom = 354.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_left = 157.0
margin_top = 129.0
margin_right = 253.0
margin_bottom = 225.0
texture = ExtResource( 4 )

[node name="VersionLabel" type="Label" parent="Menu"]
margin_top = 484.0
margin_right = 824.0
margin_bottom = 500.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
text = "Version  0.1"
align = 1

[node name="FadeIn" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
